2012-10-20  Charles Turner <chturne@gmail.com>

	Re-factor type lookup to avoid Scheme dependencies.
	* ELisp.java: Don't depend on static Scheme methods.

2011-10-24  Per Bothner  <per@bothner.com>

	* lambda.java (rewriteBody): Update for new default argument handling.

2011-05-02  Per Bothner  <per@bothner.com>

	* lambda.java (rewriteBody): Update for new LetExp/FluidLetExp api.

2011-03-23  Per Bothner  <per@bothner.com>

	* lambda.java (rewriteBody): Use letStart/letVariable
	etc methods instead of creating LetExp directly.
	* SaveExcursion.java (rewrite): Likewise.

2011-03-16  Per Bothner  <per@bothner.com>

	* ELisp.java: Update fluid_let constructor calls.
	* lambda.java (rewriteBody): Set IS_DYNAMIC on fluid variable,
	to suppress warning.

2011-02-05  Per Bothner  <per@bothner.com>

	* MiscOps.scm (if): Update to use define-rewrite-syntax.

2010-10-23  Per Bothner  <per@bothner.com>

	* MiscOps.scm (format): Update to call formatToFString.

2010-08-19  Per Bothner  <per@bothner.com>

	* ELisp.java: Update to use new Environment-setting methods.

2008-05-25  Per Bothner  <per@bothner.com>

	* ELisp.java (asChar): Generalize to use 20-bit ints.

2008-01-16  Per Bothner  <per@bothner.com>

	* lambda.java: Update FString -> CharSequence.

2007-02-27  Per Bothner  <per@bothner.com>

	* lambda.java (rewriteBody): Invoke Declaration.setCanWrite here.

2006-12-20  Per Bothner  <per@bothner.com>

	* Makefile.am (KAWA1): Remove unneeded macro.

2006-11-22  Per Bothner  <per@bothner.com>

	* Print.java: Rename Consumer methods append->write.

2006-11-20  Per Bothner  <per@bothner.com>

	* While.java: Remove redundant 'implements Printable'.

2006-11-17  Per Bothner  <per@bothner.com>

	* Print.java: Update writeChar -> append.

2006-11-13  Per Bothner  <per@bothner.com>

	* lambda.java: Update for SourceLocation-related changes.

2006-05-01  Per Bothner  <per@bothner.com>

	* ELisp.java (getLexer): Remove method - use super version.
	(read): Remove unused method.